--- a/simple-adblock/src/static/manifest.json
+++ b/simple-adblock/src/static/manifest.json
@@ -1,5 +1,5 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "AdBlock Extension",
   "description": "Simple AdBlock Extension",
   "version": "1.0.0",
@@ -17,12 +17,14 @@
       "js": ["contentScript.js"]
     }
   ],
-  "permissions": [
-    "webRequest",
-    "webRequestBlocking",
-    "<all_urls>",
-    "*://*.googleadservices.com/*",
-    "*://*.tpc.googlesyndication.com/*",
-    "*://*.g.doubleclick.net/*"
-  ]
+  "permissions": ["declarativeNetRequest"],
+  "declarative_net_request": {
+    "rule_resources": [
+      {
+        "id": "ruleset_1",
+        "enabled": true,
+        "path": "rule1.json"
+      }
+    ]
+  }
 }
